--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="icon">
                         <a href="index.html" class="logo">
                             <span class="flaticon-flower"></span>
-                            <h1>Geann Executive - Your Go-To Beauty Shop</h1>
+                            <h1>Geann Executive </h1>
                         </a>
                     </div>
                     <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Beauty Salon</h1>
