--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
                         </a>
                     </div>
                     <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Beauty Salon</h1>
-                    <p class="mb-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Created by <a href="tybritelabs.com">TyBrite Labs</a></p>
 
-                    <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="" class="btn btn-white btn-outline-white px-4 py-3">View Our Services</a></p>
+                    <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><a href="services.html" class="btn btn-white btn-outline-white px-4 py-3">View Our Services</a></p>
                 </div>
             </div>
         </div>
